@@ -22,6 +22,7 @@ use Test::File::ShareDir -share => { -dist => { 'Dist-Zilla-PluginBundle-Author-
 use lib 't/lib';
 use Helper;
 use NoNetworkHits;
+use NoPrereqChecks;
 
 my $tzil = Builder->from_config(
     { dist_root => 't/does_not_exist' },
